INCLUDE_DIRECTORIES(${CUL_CONFIG_DIR} ${CUL_INCLUDE_DIR})
LINK_DIRECTORIES(${CUL_LIBRARY_DIR})
SET(CMAKE_C_FLAGS "-std=c99")

PROJECT(CUL_TEST_BASE)
ADD_EXECUTABLE(cul_base-test "cul_base-test.c")
TARGET_LINK_LIBRARIES(cul_base-test cul)

PROJECT(CUL_TEST_MATRIX)
ADD_EXECUTABLE(cul_matrix-test "cul_matrix-test.c")
TARGET_LINK_LIBRARIES(cul_matrix-test cul)

PROJECT(CUL_TEST_RNG)
ADD_EXECUTABLE(cul_rng-test "cul_rng-test.c")
TARGET_LINK_LIBRARIES(cul_rng-test cul)
